Fixed the z-index of side-button in css.css
git-svn-id: https://plugins.svn.wordpress.org/slick-popup/trunk@1119353 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css.css
+++ b/css.css
@@ -207,7 +207,7 @@ div#curtain {
   color: #efefef;
   font-size: 17px;
   padding: 0px 10px 7px;
-  z-index: 999;
+  z-index: 1001;
   position: fixed;
   right: -52px;
   top: 45%;
